--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -178,6 +178,7 @@ margin: auto;
   gap: 10px;
 
   }
+  
 
 .btn {
     font-family: "Syne";
@@ -287,6 +288,7 @@ footer nav ul {
   margin-top: 10px;
   margin-left: 35px;
 }
+
 
 h3{
   color: #000;
@@ -470,7 +472,7 @@ a {
 
 .image-container {
   position: relative;
-  margin: 10px; /* Ajustez la marge selon vos besoins */
+  margin: 10px; 
 }
 .delete-icon {
   background-color: #000;
